# angular-samples

./: .gitignore  angular.md  stuff_todo.txt
angular-challenges/challenge-01/: angular.json  package.json
angular-challenges/challenge-01/src/: index.html
angular-challenges/challenge-02/: angular.json  package.json
angular-challenges/challenge-02/src/: index.html
angular-challenges/challenge-03/: angular.json  package.json
angular-challenges/challenge-03/src/: index.html
apache-echarts-sample/: InstallationLog.txt  README.md  angular.json  mise.toml  package.json
apache-echarts-sample/data_gen/: Cargo.toml
apache-echarts-sample/data_gen/src/: lib.rs  main.rs
apache-echarts-sample/macrw/: .clangd  CMakeLists.txt
apache-echarts-sample/macrw/src/: extract_data.cpp  main.cpp
apache-echarts-sample/macrw/src/config/: EnvFetcher.cpp  EnvFetcher.h
apache-echarts-sample/macrw/src/controller/: MusicController.cpp  MusicEndpoints.h
apache-echarts-sample/macrw/src/helper/: DataReader.h
apache-echarts-sample/macrw/src/model/: AppConfig.h  DataChart.h  Pagination.h
apache-echarts-sample/macrw/src/models/: music.h  pagination.h
apache-echarts-sample/macrw/src/service/: ExtractService.cpp  MusicService.cpp  MusicService.h
apache-echarts-sample/src/: index.html  styles.scss
backends/data_gen-apache-echarts/: Cargo.toml
backends/data_gen-apache-echarts/src/: consts.rs  lib.rs  main.rs
backends/data_gen-apache-echarts/src/config/: cors.rs  mod.rs  routes.rs
backends/data_gen-apache-echarts/src/error_handler/: app_error.rs
backends/data_gen-apache-echarts/src/models/: music.rs  pagination.rs
backends/data_gen-apache-echarts/src/operations/: extract.rs
knowledge-hub/: README.md  angular.json  package.json
knowledge-hub/src/: index.html
routing-ptest/: angular.json  package.json
routing-ptest/src/: index.html
template/: angular.json  mise.toml  package.json
train-act/: README.md  angular.json  package.json
train-act/src/: index.html
trying-application/: angular.json  package.json
trying-application/src/: index.html  styles.scss
vehicle-frontend/: angular.json  package.json
vehicle-frontend/src/: index.html
wishlist/: angular.json  package.json
(+96 files in other folders)
