[package]
name = "gauss"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
polars = { version = "0.38", features = ["csv", "lazy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
minmaxlttb = "0.1"
chrono = "0.4.44"
anyhow = "1.0"
log = "0.4"
